# corelib-rs

./: .gitignore  CONFORMANCE_GAP_ANALYSIS.md  Cargo.toml  README.md
.devcontainer/: attach.sh  build.sh  start.sh
.github/: renovate.json
.github/actions/rust/: action.yml
.github/workflows/: ci.yml  docs.yml
examples/: person.rs
src/: error.rs  istream.rs  lib.rs  ostream.rs  types.rs  varint.rs
tests/: api_tests.rs  config_tests.rs  istream_tests.rs  ostream_tests.rs  reader_tests.rs  roundtrip_tests.rs  vectors_tests.rs
tests/common/: mod.rs
