[package]
name = "sofa-buffers-corelib"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "SofaBuffers (Sofab) — compact, streaming serialization core tuned for speed on big machines: zero-copy contiguous decoding (advance-a-pointer), std + heap, visitor-driven streaming decode. Wire-compatible with every corelib-* port."
repository = "https://github.com/sofa-buffers/corelib-rs"
keywords = ["serialization", "varint", "streaming", "zero-copy", "protobuf"]
categories = ["encoding", "parsing", "network-programming"]

# The crate is published on crates.io as `sofa-buffers-corelib` (the name users
# add to their `Cargo.toml`), but the importable namespace is `sofab` —
# `use sofab::…`. This matches the language-independent API contract
# (ARCHITECTURE §6).
[lib]
name = "sofab"

[dev-dependencies]
# Process CPU time (clock_gettime) for the runtime benchmarks, so throughput is
# measured against CPU time rather than wall-clock — matching the C/C++ tools.
libc = "0.2"

# Parse the shared `assets/test_vectors.json` (the cross-language source of
# truth) in the conformance test suite. Test-only.
serde_json = "1"

# Per-op cost: cycles/op (hardware cycle counter) + throughput MB/s, over a
# ~1s CPU-time loop. Mirrors corelib-c-cpp bench/perf.
[[bench]]
name = "perf"
harness = false

# Throughput speedtest: MB/s table over a ~1s CPU-time loop per workload.
[[bench]]
name = "bench"
harness = false

# A hand-written stand-in for what the `generator` repo emits: a generated-object
# layer (dead-simple serialize/deserialize + streaming) built purely on the
# corelib streaming primitives (ARCHITECTURE §6.1).
[[example]]
name = "person"

# No Cargo feature flags: every wire type is always compiled in and the scalar
# value type is always 64-bit. This is the high-speed build — it does not trade
# wire-type granularity or value range for footprint.

# ---------------------------------------------------------------------------
# Speed-optimized release profile (the whole point of this port). The opposite
# of the no_std crate's size-tuned `opt-level = "z"`: here we want the fastest
# code the compiler can produce. For the last few percent, build benchmarks with
# `RUSTFLAGS="-C target-cpu=native"`.
# ---------------------------------------------------------------------------
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# Benchmark profile: -O3 + fat LTO for a fair comparison with the C/C++ -O3
# builds. Keep debug info so `perf`/Callgrind can attribute cost.
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
